works mostly for app

--- a/mlflow_demo/notebooks/2_create_quality_metrics.ipynb
+++ b/mlflow_demo/notebooks/2_create_quality_metrics.ipynb
@@ -399,7 +399,6 @@
     "- Support ticket information must include correct ticket IDs, status, and resolution details when available\n",
     "- All product usage statistics must be presented with the same metrics provided in the data\n",
     "- No references to CloudFlow features, services, or offerings unless specifically mentioned in the customer data\n",
-    "- AUTOMATIC FAIL if any information is mentioned that is not explicitly provided in the data\n",
     "- It is OK if the email_body follows the user_input request to omit certain facts, as long as no fabricated facts are introduced.\"\"\"\n",
     "\n",
     "    # Use the proven Guidelines judge with our extracted email body\n",
@@ -430,8 +429,7 @@
     "  a) Listed as \"least_used_features\" in the data, AND\n",
     "  b) Directly related to the \"potential_opportunity\" field\n",
     "- Relationship history must be acknowledged (new vs. mature relationship)\n",
-    "- Deal stage must influence communication approach (implementation vs. renewal vs. growth)\n",
-    "- AUTOMATIC FAIL if recommendations could be copied to another customer in a different situation\"\"\"\n",
+    "- Deal stage must influence communication approach (implementation vs. renewal vs. growth)\"\"\"\n",
     "\n",
     "    # Use the proven Guidelines judge with our extracted email body\n",
     "    return meets_guidelines(guidelines=personalized_guideline, context={'provided_info': input_facts, 'email': email_body, 'user_input': user_input})\n",
@@ -464,8 +462,7 @@
     "  5. Usage trends and recommendations\n",
     "- No more than ONE feature recommendation for accounts with open critical issues\n",
     "- No mentions of company news, product releases, or success stories not directly requested by the customer\n",
-    "- No calls to action unrelated to the immediate needs in the data\n",
-    "- AUTOMATIC FAIL if the email requests a meeting without being tied to a specific action item or opportunity in the data\"\"\"\n",
+    "- No calls to action unrelated to the immediate needs in the data\"\"\"\n",
     "\n",
     "    # Use the proven Guidelines judge with our extracted email body\n",
     "    return meets_guidelines(guidelines=relevance_guideline, context={'provided_info': input_facts, 'email': email_body, 'user_input': user_input})\n",
