--- a/mlflow_demo/notebooks/1_observe_with_traces.ipynb
+++ b/mlflow_demo/notebooks/1_observe_with_traces.ipynb
@@ -51,10 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b0fb6dad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running in Local IDE\n",
+      "=== Environment Setup ===\n",
+      "DATABRICKS_HOST: None\n",
+      "MLFLOW_EXPERIMENT_ID: None\n",
+      "LLM_MODEL: None\n",
+      "UC_CATALOG: None\n",
+      "UC_SCHEMA: None\n",
+      "✅ Environment variables loaded successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
@@ -364,7 +379,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlflow_genai_email_demo",
+   "display_name": "mlflow-email-demo",
    "language": "python",
    "name": "python3"
   },
@@ -378,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
